Bug 118966 - LibreOffice doesn't use antialiasing? in gtk/gtk3
Summary: LibreOffice doesn't use antialiasing? in gtk/gtk3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 118981 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-07-27 09:51 UTC by Xisco Faulí
Modified: 2018-07-29 10:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion 6.0 and master (137.82 KB, image/png)
2018-07-27 09:51 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-07-27 09:51:38 UTC
Created attachment 143801 [details]
Comparsion 6.0 and master

Steps to reproduce:
1. Open LibreOffice

-> it seems antialiasing is not used... maybe it's another reason but from my point of view it seems like so... See attached image

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: aa84f1458f422c1acf38b53a3e3138cd0e84e313
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-07-27 09:52:58 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3ecd8f19a91ed7141304a2080fb11612b5ff30b3

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-07-26 09:06:21 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-07-26 10:22:29 +0200
commit 3ecd8f19a91ed7141304a2080fb11612b5ff30b3 (patch)
tree 8b38653012e6cc50acbf94603415c6a1b6120f76
parent b032d746a48b8887ccc2330b2fdbf63d701a213f (diff)
vcl cairo text renderer: support non-AA text
Non-AA lines were already working, but text was always anti-aliased.

(Use-case is reference bitmaps in a testsuite, where AA just makes it
harder to determine if the expected and actual rendering output match.)

Bisected with: bibisect-linux64-6.2

Adding Cc: to Miklos Vajna
Comment 2 Miklos Vajna 2018-07-27 13:07:34 UTC
Oh, that was quick. :-)

So we have an AA setting on the UI, but if it's not ignored, then we find lots of places which don't request AA, even if the relevant setting is enabled. Hmm.
Comment 3 Miklos Vajna 2018-07-27 13:08:54 UTC
This is Linux-only BTW (as far as I see).
Comment 4 Xisco Faulí 2018-07-27 13:22:17 UTC
(In reply to Miklos Vajna from comment #3)
> This is Linux-only BTW (as far as I see).

true! I forgot to adjust the OS field
Comment 5 Commit Notification 2018-07-27 18:52:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6538f5bdd876911ea30f84a6512c03908e620fd

tdf#118966 vcl: add a flag to determine if AA of fonts is used from the system

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Jean-Baptiste Faure 2018-07-28 13:50:21 UTC
Verified fixed in Version: 6.2.0.0.alpha0+
Build ID: e1d7b0973d8318bd7f153350e2e8a38bec3b3e7b
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 
Ubuntu_16.04_x86-64
Locale: fr-FR (fr_FR.UTF-8); Calc: threaded

Best regards. JBF
Comment 7 Jean-Baptiste Faure 2018-07-29 10:03:23 UTC
*** Bug 118981 has been marked as a duplicate of this bug. ***